--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    
+    <item
+        android:id="@+id/action_settings"
+        android:title="設定"
+        android:icon="@drawable/ic_settings"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_theme_toggle"
         android:title="切換日夜模式"
+        android:icon="@drawable/ic_mode_night"
         app:showAsAction="ifRoom" />
 </menu>
