--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,11 @@
     <color name="window_background">#FFFFFF</color>
     <color name="content_background">#F5F5F5</color>
     <color name="header_background">#E0E0E0</color>
+    <color name="search_input_background">#F0F0F0</color>
+    <color name="button_text_color">#FFFFFF</color>
+    
+    <color name="highlight_background">#FFE0B2</color>
+    <color name="preview_title_text">#FF9800</color>
     
     <color name="text_primary">#000000</color>
     <color name="text_secondary">#666666</color>
