--- a/app/src/main/res/layout/item_thread.xml
+++ b/app/src/main/res/layout/item_thread.xml
@@ -78,6 +78,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_share"
+                app:tint="?android:attr/textColorSecondary"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:padding="2dp"
                 android:contentDescription="分享" />
