--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,10 +7,12 @@
     
     <!-- UI Colors (Night) -->
     <color name="window_background">#121212</color>
-    <color name="content_background">#252525</color>
+    <color name="content_background">#1C1C1C</color>
     <color name="header_background">#2C2C2C</color>
     <color name="search_input_background">#2C2C2C</color>
     <color name="button_text_color">#FFFFFF</color>
+    
+    <color name="fab_background">#333333</color>
     
     <color name="highlight_background">#5D4037</color>
     <color name="preview_title_text">#FFB74D</color>
