--- a/app/src/main/res/layout/item_thread.xml
+++ b/app/src/main/res/layout/item_thread.xml
@@ -80,7 +80,7 @@
                 android:src="@drawable/ic_share"
                 android:padding="6dp"
                 android:background="@drawable/bg_circle_button"
-                app:backgroundTint="?attr/colorAccent"
+                app:backgroundTint="@color/fab_background"
                 app:tint="@android:color/white"
                 android:contentDescription="分享" />
         </LinearLayout>
