--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <cache-path name="cache" path="." />
-    <external-path name="external" path="." />
-    <external-files-path name="external_files" path="." />
+    <!-- Only expose the application's internal cache directory -->
+    <cache-path name="shared_images" path="." />
+    <!-- If we need to share files from external cache (e.g. Glide) -->
+    <external-cache-path name="external_cache" path="." />
 </paths>
