--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,10 @@
         <item name="android:scaleType">centerInside</item>
         <item name="android:tint">@android:color/white</item>
     </style>
+
+    <!-- 繁體中文註解：統一引文預覽標題樣式，便於日夜模式維護 -->
+    <style name="TextAppearance.KomicaReader.PreviewTitle" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/preview_title_text</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
